feat: add mapping user_id with jid
